--- a/app/assets/stylesheets/pages/login.scss
+++ b/app/assets/stylesheets/pages/login.scss
@@ -1,7 +1,7 @@
 .form-style-10{
-  max-width:600px;
+  max-width:530px;
   padding:30px;
-  margin:40px auto;
+  margin:0px auto;
   background: #FFF;
   border-radius: 10px;
   -webkit-border-radius:10px;
@@ -16,6 +16,8 @@
   border-radius: 6px;
   margin-bottom: 15px;
   overflow: auto;
+  width: 460px;
+  margin: 0 auto;
 }
 
 .form-style-10 h1{
